; ModuleID = '/home/carl/AnghaBench/HandBrake/test/extr_test.c_parse_hhmmss_strtok.c'
source_filename = "/home/carl/AnghaBench/HandBrake/test/extr_test.c_parse_hhmmss_strtok.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c":\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (double ()* @parse_hhmmss_strtok to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @parse_hhmmss_strtok() #0 {
  %1 = alloca double, align 8
  %2 = alloca i8*, align 8
  store double 0.000000e+00, double* %1, align 8
  br label %3

3:                                                ; preds = %6, %0
  %4 = call i8* @strtok(i32* null, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i8* %4, i8** %2, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %6, label %13

6:                                                ; preds = %3
  %7 = load double, double* %1, align 8
  %8 = fmul double 6.000000e+01, %7
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @strtod(i8* %9, i32* null)
  %11 = sitofp i32 %10 to double
  %12 = fadd double %8, %11
  store double %12, double* %1, align 8
  br label %3

13:                                               ; preds = %3
  %14 = load double, double* %1, align 8
  ret double %14
}

declare dso_local i8* @strtok(i32*, i8*) #1

declare dso_local i32 @strtod(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
